--- a/.github/workflows/proxy_check.yml
+++ b/.github/workflows/proxy_check.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install requests colorama tqdm
+        pip install -r requirements.txt
 
     - name: Run proxy check script
       run: |
